# smart-fuzz

./: Cargo.toml  LICENSE  README.md
docs/: api.md
examples/: example_protocol.yaml
src/: config.rs  lib.rs
src/engine/: analyze.rs  mod.rs  mutate.rs
src/protocol/: packet.rs
tests/: fuzz_test.rs
