[package]
name = "smart-fuzz"
version = "0.1.0"
edition = "2021"
description = "AI‑guided fuzzing engine that learns from crash traces to generate smarter payloads."
license = "MIT OR Apache-2.0"
authors = ["Myroslav Mokhammad Abdeljawwad <myroslav@example.com>"]
readme = "README.md"
homepage = "https://github.com/myroslav/smart-fuzz"
repository = "https://github.com/myroslav/smart-fuzz.git"
keywords = ["fuzzing", "ai", "security", "crash-analysis"]
categories = ["development-tools::testing", "cryptography"]

[lib]
name = "smart_fuzz"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"

# Optional dependency for AI guidance; kept as feature to avoid mandatory heavy crates
tch = { version = "0.13", optional = true, default-features = false }

[features]
default = ["logging"]
logging = []
ai = ["tch"]

[dev-dependencies]
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.1"

[[bench]]
name = "fuzz_benchmark"
harness = false

# End of Cargo.toml